--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,7 +2,7 @@
     <ul class="mat-typography" fxLayout="column" fxLayout.xs="column">
         <li *ngFor="let post of entries | async">
             <p class="post-category">{{post.category}}</p>
-            <a routerLink="/post/{{post.id}}" >{{post.title}}</a>
+            <a routerLink="/post/{{post.id}}" (click)="goPost(post)" >{{post.title}}</a>
             <img src={{post.coverImage}} />
             <p class="post-content">{{post.content}}</p>
         </li>
