--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,9 +1,11 @@
-
-    <ul class="mat-typography" fxLayout="column" fxLayout.xs="column">
+<div class="mat-typography">
+    <ul fxLayout="column" fxLayout.xs="column">
         <li *ngFor="let post of entries | async">
             <p class="post-category">{{post.category}}</p>
             <a routerLink="/post/{{post.id}}" (click)="goPost(post)" >{{post.title}}</a>
             <img src={{post.coverImage}} />
-            <p class="post-content">{{post.content}}</p>
+            <p class="post-content">{{post.preview}}</p>
+            <p class="mat-typography">Continue reading...</p>
         </li>
     </ul>
+</div>
