--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -12,7 +12,7 @@ a {
     text-decoration: none;
     text-align: center;
     align-content: center;
-    font-size: 42px;
+    font-size: 2.5rem;
     color: #888;
 }
 
@@ -23,9 +23,9 @@ a:visited{
 .post-category{
     text-align: center;
     text-transform: uppercase !important;
-    font-size: 12px;
+    font-size: 0.8rem;
 }
 
 .post-content{
-    font-size: 12px;
+    font-size: 0.7rem;
 }
