--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -1,8 +1,3 @@
-img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
 
 ul{
     list-style-type: none;
@@ -29,3 +24,29 @@ a:visited{
 .post-content{
     font-size: 0.7rem;
 }
+
+
+.progressive-loading {
+    overflow: hidden;
+    position: relative;
+    &-wrapper {
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        min-width: 100%;
+        transform: scale(1.1);
+        opacity: 1;
+        transition: opacity 2s ease-in-out;
+        &.original {
+          position: absolute;
+        }
+        &.thumb {
+          filter: blur(8px);
+        }
+        &.hide {
+          opacity: 0;
+        }
+      }
+    }
+  }
