--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -6,7 +6,8 @@ ul{
 a {
     text-decoration: none;
     text-align: center;
-    align-content: center;
+    display: block;
+    line-height:2.5rem;
     font-size: 2.5rem;
     color: #888;
 }
